# acur

./: CMakeLists.txt  Makefile.am  README.md  configure.ac
src/: CMakeLists.txt  acur.c  acur.h
src/tests/: init.c  iter.c
tests/: CMakeLists.txt  init.c  iter.c
